--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,4 +8,13 @@
 <body>
   <nav>
     <h1><a href="/">Smoothies</a></h1>
+    <ul>
+     <% if(user){ %>
+      <li> Welcome, <%= user.email %> </li>
+      <li> <a href="/logout">logout </a>  </li>
+      <% }else{ %>
+      <li> <a href="/login">Login </a>  </li>
+      <li> <a href="/signup" class="btn"> Signup </a> </li>  
+      <%}%>
+    </ul>
   </nav>
